# tutorial

./: .gitignore  CMakeLists.txt
cmake/: ShaderCompile.cmake
src/: CMakeLists.txt  main.cpp
src/lib/: CMakeLists.txt
src/shader/: CMakeLists.txt
src/shader/glsl/: shader.vert
